apps/obsidian-livesync/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/k8s-json-schema/master/master-standalone-strict/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-livesync
  labels:
    app.kubernetes.io/name: obsidian-livesync
