apps/obsidian-livesync/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/k8s-json-schema/master/master-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian-livesync
  labels:
    app: obsidian-livesync
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5984
    targetPort: 5984
    protocol: TCP
  selector:
    app: obsidian-livesync
