apps/obsidian-livesync/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sunny-glacier.desertbluffs.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - sunny-glacier.desertbluffs.com
  rules:
  - backendRefs:
    - name: couchdb
      port: 5984
      group: ''
      kind: Service
      weight: 1
